7236 libumem should be able to abort() when an allocation fails Reviewed by: Alex Reece <alex@delphix.com> Reviewed by: Paul Dagnelie <pcd@delphix.com> Reviewed by: Basil Crow <basil.crow@delphix.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>